--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,11 +22,12 @@ jobs:
         commands: |
             apt-get update
             apt-get install -y libopencv-dev libegl1-mesa-dev cmake build-essential libdrm-dev libgbm-dev openjdk-11-jdk
-            apt-get remove -y libcamera0 python3-libcamera
+            apt-get remove -y *libcamera* python3-libcamera
             wget https://github.com/ArduCAM/Arducam-Pivariety-V4L2-Driver/releases/download/libcamera-v0.0.5/libcamera-dev-0.0.12-bullseye-arm64.deb
             dpkg -i libcamera-dev-0.0.12-bullseye-arm64.deb
             apt-get -f install
-            ldconfig -p  | grep libcamera
+            sudo rm /etc/ld.so.cache
+            sudo ldconfig
             cmake -B build-pi -DCMAKE_BUILD_TYPE=Release
             cmake --build build-pi -j 4
 
